--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
-    "from torchvision import datasets, transforms"
+    "from torchvision import datasets, transforms\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -23,121 +24,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to MNIST/raw/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea6adcc2539b48aab65175cd1232eebf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=9912422.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Extracting MNIST/raw/train-images-idx3-ubyte.gz to MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to MNIST/raw/train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab484bc1b3b44cbb9b6a26fd2ff45b1f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=28881.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Extracting MNIST/raw/train-labels-idx1-ubyte.gz to MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ad5db6858c644ea99f445da40832051",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=1648877.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Extracting MNIST/raw/t10k-images-idx3-ubyte.gz to MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afa341ec783d41059ba7d37ac74460ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=4542.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Extracting MNIST/raw/t10k-labels-idx1-ubyte.gz to MNIST/raw\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train = datasets.MNIST(\"\", train=True, download=True, transform=transforms.Compose([transforms.ToTensor()]))\n",
     "test = datasets.MNIST(\"\", train=False, download=True, transform=transforms.Compose([transforms.ToTensor()]))\n",
     "train_set = torch.utils.data.DataLoader(train, batch_size=10, shuffle=True)\n",
     "test_set = torch.utils.data.DataLoader(test, batch_size=10, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MNIST(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.dropout = nn.Dropout(0.2)\n",
+    "        self.conv1 = nn.Conv2d(1, 32, 3)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, 3)\n",
+    "        self.conv3 = nn.Conv2d(64, 128, 3)\n",
+    "        x = torch.randn(28, 28).view(-1, 1, 28, 28)\n",
+    "        self._to_linear = None\n",
+    "        self.convs(x)\n",
+    "        self.fc1 = nn.Linear(self._to_linear, 512)\n",
+    "        self.fc2 = nn.Linear(512, 10)\n",
+    "        \n",
+    "    def convs(self, x):\n",
+    "        x = F.max_pool2d(F.relu(self.conv1(x)), (2, 2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv2(x)), (2, 2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv3(x)), (2, 2))\n",
+    "        if self._to_linear is None:\n",
+    "            self._to_linear = x[0].shape[0] * x[0].shape[1] * x[0].shape[2]\n",
+    "        return x\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.convs(x)\n",
+    "        x = x.view(-1, self._to_linear)\n",
+    "        x = self.dropout(F.relu(self.fc1(x)))\n",
+    "        x = self.fc2(x)\n",
+    "        return F.log_softmax(x, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6000/6000 [00:40<00:00, 148.60it/s]\n",
+      "  0%|          | 13/6000 [00:00<00:46, 127.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0320, grad_fn=<NllLossBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6000/6000 [00:40<00:00, 146.90it/s]\n",
+      "  0%|          | 15/6000 [00:00<00:41, 143.48it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0023, grad_fn=<NllLossBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6000/6000 [00:40<00:00, 147.29it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0094, grad_fn=<NllLossBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "net = MNIST()\n",
+    "optimizer = optim.Adam(net.parameters(), lr=0.001)\n",
+    "EPOCHS = 3\n",
+    "for batch in range(EPOCHS):\n",
+    "    for data in tqdm(train_set):\n",
+    "        X, y = data\n",
+    "        net.zero_grad()\n",
+    "        output = net(X)\n",
+    "        loss = F.nll_loss(output, y)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    print(loss)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CIFAR-10"
    ]
   },
   {
