--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### params to tune\n",
+    "- weight decay"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +20,8 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "from torchvision import datasets, transforms\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -24,19 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = datasets.MNIST(\"\", train=True, download=True, transform=transforms.Compose([transforms.ToTensor()]))\n",
-    "test = datasets.MNIST(\"\", train=False, download=True, transform=transforms.Compose([transforms.ToTensor()]))\n",
+    "train = datasets.MNIST(\"./347data\", train=True, download=True, transform=transforms.Compose([transforms.ToTensor()]))\n",
+    "test = datasets.MNIST(\"./347data\", train=False, download=True, transform=transforms.Compose([transforms.ToTensor()]))\n",
+    "validation_set_size = int(len(train) * 0.1)\n",
+    "training_set_size = len(train) - validation_set_size\n",
+    "train_set, validation_set = torch.utils.data.random_split(train, [training_set_size, validation_set_size])\n",
     "train_set = torch.utils.data.DataLoader(train, batch_size=10, shuffle=True)\n",
+    "validation_set = torch.utils.data.DataLoader(validation_set, batch_size=10, shuffle=True)\n",
     "test_set = torch.utils.data.DataLoader(test, batch_size=10, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,23 +61,24 @@
     "        self.conv1 = nn.Conv2d(1, 32, 3)\n",
     "        self.conv2 = nn.Conv2d(32, 64, 3)\n",
     "        self.conv3 = nn.Conv2d(64, 128, 3)\n",
-    "        x = torch.randn(28, 28).view(-1, 1, 28, 28)\n",
-    "        self._to_linear = None\n",
+    "        x = torch.randn(29, 29).view(-1, 1, 29, 29)\n",
+    "        self.to_linear = None\n",
     "        self.convs(x)\n",
-    "        self.fc1 = nn.Linear(self._to_linear, 512)\n",
+    "        self.fc1 = nn.Linear(self.to_linear, 512)\n",
     "        self.fc2 = nn.Linear(512, 10)\n",
-    "        \n",
+    "\n",
     "    def convs(self, x):\n",
     "        x = F.max_pool2d(F.relu(self.conv1(x)), (2, 2))\n",
     "        x = F.max_pool2d(F.relu(self.conv2(x)), (2, 2))\n",
     "        x = F.max_pool2d(F.relu(self.conv3(x)), (2, 2))\n",
-    "        if self._to_linear is None:\n",
-    "            self._to_linear = x[0].shape[0] * x[0].shape[1] * x[0].shape[2]\n",
+    "        if self.to_linear is None:\n",
+    "            self.to_linear = x[0].shape[0] * x[0].shape[1] * x[0].shape[2]\n",
     "        return x\n",
-    "    \n",
+    "\n",
     "    def forward(self, x):\n",
+    "        x = F.pad(x, (0, 0, 0, 0))\n",
     "        x = self.convs(x)\n",
-    "        x = x.view(-1, self._to_linear)\n",
+    "        x = x.view(-1, self.to_linear)\n",
     "        x = self.dropout(F.relu(self.fc1(x)))\n",
     "        x = self.fc2(x)\n",
     "        return F.log_softmax(x, dim=1)"
@@ -71,51 +86,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:40<00:00, 148.60it/s]\n",
-      "  0%|          | 13/6000 [00:00<00:46, 127.57it/s]"
+      "100%|██████████| 6000/6000 [00:40<00:00, 149.60it/s]\n",
+      "  0%|          | 15/6000 [00:00<00:42, 141.77it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0320, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0163, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:40<00:00, 146.90it/s]\n",
-      "  0%|          | 15/6000 [00:00<00:41, 143.48it/s]"
+      "100%|██████████| 6000/6000 [00:41<00:00, 145.13it/s]\n",
+      "  0%|          | 15/6000 [00:00<00:41, 143.59it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0023, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.4607, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:40<00:00, 147.29it/s]"
+      "100%|██████████| 6000/6000 [00:41<00:00, 145.83it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0094, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0808, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
@@ -127,14 +142,14 @@
     }
    ],
    "source": [
-    "net = MNIST()\n",
-    "optimizer = optim.Adam(net.parameters(), lr=0.001)\n",
+    "MNIST_net = MNIST()\n",
+    "optimizer = optim.Adam(MNIST_net.parameters(), lr=0.001)\n",
     "EPOCHS = 3\n",
     "for batch in range(EPOCHS):\n",
     "    for data in tqdm(train_set):\n",
     "        X, y = data\n",
-    "        net.zero_grad()\n",
-    "        output = net(X)\n",
+    "        MNIST_net.zero_grad()\n",
+    "        output = MNIST_net(X)\n",
     "        loss = F.nll_loss(output, y)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -151,10 +166,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./347data/cifar-10-python.tar.gz\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "80dbc9ce8fbc4ef8918e4ac3356d7c76",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=170498071.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Extracting ./347data/cifar-10-python.tar.gz to ./347data\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = datasets.CIFAR10(\"./347data\", train=True, download=True, transform=transforms.Compose([transforms.ToTensor()]))\n",
+    "test = datasets.CIFAR10(\"./347data\", train=False, download=True, transform=transforms.Compose([transforms.ToTensor()]))\n",
+    "train_set = torch.utils.data.DataLoader(train, batch_size=10, shuffle=True)\n",
+    "test_set = torch.utils.data.DataLoader(test, batch_size=10, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class CIFAR10(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.dropout = nn.Dropout(0.5)\n",
+    "        self.conv1 = nn.Conv2d(3, 32, 3)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, 3)\n",
+    "        self.conv3 = nn.Conv2d(64, 128, 3)\n",
+    "        x = torch.randn(32, 32).view(-1, 3, 32, 32)\n",
+    "        self.to_linear = None\n",
+    "        self.convs(x)\n",
+    "        self.fc1 = nn.Linear(self.to_linear, 512)\n",
+    "        self.fc2 = nn.Linear(512, 10)\n",
+    "\n",
+    "    def convs(self, x):\n",
+    "        x = F.max_pool2d(F.relu(self.conv1(x)), (2, 2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv2(x)), (2, 2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv3(x)), (2, 2))\n",
+    "        if self.to_linear is None:\n",
+    "            self.to_linear = x[0].shape[0] * x[0].shape[1] * x[0].shape[2]\n",
+    "        return x\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = F.pad(x, (0, 0, 0, 0))\n",
+    "        x = self.convs(x)\n",
+    "        x = x.view(-1, self.to_linear)\n",
+    "        x = self.dropout(F.relu(self.fc1(x)))\n",
+    "        x = self.fc2(x)\n",
+    "        return F.log_softmax(x, dim=1)"
+   ]
   }
  ],
  "metadata": {
