--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -157,6 +157,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -209,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +227,7 @@
     "        self.conv1 = nn.Conv2d(3, 32, 3)\n",
     "        self.conv2 = nn.Conv2d(32, 64, 3)\n",
     "        self.conv3 = nn.Conv2d(64, 128, 3)\n",
-    "        x = torch.randn(32, 32).view(-1, 3, 32, 32)\n",
+    "        x = torch.randn(3,32, 32).view(-1, 3, 32, 32)\n",
     "        self.to_linear = None\n",
     "        self.convs(x)\n",
     "        self.fc1 = nn.Linear(self.to_linear, 512)\n",
@@ -241,6 +248,78 @@
     "        x = self.dropout(F.relu(self.fc1(x)))\n",
     "        x = self.fc2(x)\n",
     "        return F.log_softmax(x, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6000/6000 [00:27<00:00, 221.41it/s]\n",
+      "  0%|          | 22/6000 [00:00<00:27, 219.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0940, grad_fn=<NllLossBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6000/6000 [00:26<00:00, 225.97it/s]\n",
+      "  0%|          | 22/6000 [00:00<00:27, 219.02it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0008, grad_fn=<NllLossBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6000/6000 [00:27<00:00, 220.14it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0155, grad_fn=<NllLossBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "CIFAR10_net = CIFAR10()\n",
+    "optimizer = optim.Adam(CIFAR10_net.parameters(), lr=0.001)\n",
+    "EPOCHS = 3\n",
+    "for batch in range(EPOCHS):\n",
+    "    for data in tqdm(train_set):\n",
+    "        X, y = data\n",
+    "        CIFAR10_net.zero_grad()\n",
+    "        output = MNIST_net(X)\n",
+    "        loss = F.nll_loss(output, y)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    print(loss)"
    ]
   }
  ],
