--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -6,13 +6,21 @@
    "metadata": {},
    "source": [
     "### params to tune\n",
-    "- weight decay"
+    "- weight decay\n",
+    "- dropout rate\n",
+    "- learning rate\n",
+    "- batch size\n",
+    "- loss function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -21,7 +29,8 @@
     "import torch.optim as optim\n",
     "from torchvision import datasets, transforms\n",
     "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np\n",
+    "import sklearn.metrics as metrics"
    ]
   },
   {
@@ -34,8 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "train = datasets.MNIST(\"./347data\", train=True, download=True, transform=transforms.Compose([transforms.ToTensor()]))\n",
@@ -50,8 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "class MNIST(nn.Module):\n",
@@ -86,51 +103,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:40<00:00, 149.60it/s]\n",
-      "  0%|          | 15/6000 [00:00<00:42, 141.77it/s]"
+      "100%|██████████| 6000/6000 [00:25<00:00, 239.56it/s]\n",
+      "  0%|          | 23/6000 [00:00<00:26, 224.18it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0163, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0334, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:41<00:00, 145.13it/s]\n",
-      "  0%|          | 15/6000 [00:00<00:41, 143.59it/s]"
+      "100%|██████████| 6000/6000 [00:25<00:00, 234.80it/s]\n",
+      "  0%|          | 24/6000 [00:00<00:25, 235.92it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.4607, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0045, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:41<00:00, 145.83it/s]"
+      "100%|██████████| 6000/6000 [00:24<00:00, 240.25it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0808, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0085, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
@@ -142,15 +163,15 @@
     }
    ],
    "source": [
-    "MNIST_net = MNIST()\n",
+    "MNIST_net = MNIST().cuda()\n",
     "optimizer = optim.Adam(MNIST_net.parameters(), lr=0.001)\n",
     "EPOCHS = 3\n",
     "for batch in range(EPOCHS):\n",
     "    for data in tqdm(train_set):\n",
     "        X, y = data\n",
     "        MNIST_net.zero_grad()\n",
-    "        output = MNIST_net(X)\n",
-    "        loss = F.nll_loss(output, y)\n",
+    "        output = MNIST_net(X.cuda())\n",
+    "        loss = F.nll_loss(output, y.cuda())\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    print(loss)"
@@ -158,10 +179,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 39,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy: 0.988\n",
+      "Validation F1 Score: 0.987824552068956\n",
+      "Validation AUC Score: 0.9932404031201022\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = []\n",
+    "true = []\n",
+    "MNIST_net.eval()\n",
+    "with torch.no_grad():\n",
+    "    for data in validation_set:\n",
+    "        X, y = data\n",
+    "        for i in MNIST_net(X.cuda()):\n",
+    "            output.append(torch.argmax(i).cpu())\n",
+    "        for i in y:\n",
+    "            true.append(i)\n",
+    "MNIST_net.train()\n",
+    "print(\"Validation Accuracy:\", metrics.accuracy_score(true, output))\n",
+    "print(\"Validation F1 Score:\", metrics.f1_score(true, output, average=\"macro\"))\n",
+    "# make one hot encoding\n",
+    "true = np.eye(10)[true]\n",
+    "output = np.eye(10)[output]\n",
+    "print(\"Validation AUC Score:\", metrics.roc_auc_score(true, output, multi_class=\"ovo\", average=\"macro\"))\n",
+    "            "
+   ]
   },
   {
    "attachments": {},
@@ -174,7 +228,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -217,7 +275,11 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "class CIFAR10(nn.Module):\n",
@@ -253,7 +315,11 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -308,18 +374,42 @@
     }
    ],
    "source": [
-    "CIFAR10_net = CIFAR10()\n",
+    "CIFAR10_net = CIFAR10().cuda()\n",
     "optimizer = optim.Adam(CIFAR10_net.parameters(), lr=0.001)\n",
     "EPOCHS = 3\n",
     "for batch in range(EPOCHS):\n",
     "    for data in tqdm(train_set):\n",
     "        X, y = data\n",
     "        CIFAR10_net.zero_grad()\n",
-    "        output = MNIST_net(X)\n",
-    "        loss = F.nll_loss(output, y)\n",
+    "        output = MNIST_net(X.cuda())\n",
+    "        loss = F.nll_loss(output, y.cuda())\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "output = []\n",
+    "true = []\n",
+    "CIFAR10_net.eval()\n",
+    "with torch.no_grad():\n",
+    "    for data in validation_set:\n",
+    "        X, y = data\n",
+    "        output.append(torch.argmax(CIFAR10_net(X.cuda())))\n",
+    "        true.append(y)\n",
+    "CIFAR10_net.train()\n",
+    "print(\"Validation Accuracy:\", metrics.accuracy_score(true), output.argmax(dim=1))\n",
+    "print(\"Validation F1 Score:\", metrics.f1_score(true, output, average=\"macro\"))\n",
+    "print(\"Validation AUC Score:\", metrics.roc_auc_score(true, output, average=\"macro\"))  "
    ]
   }
  ],
@@ -328,18 +418,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   },
   "orig_nbformat": 4
  },
