--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -1,19 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### params to tune\n",
-    "- weight decay\n",
-    "- dropout rate\n",
-    "- learning rate\n",
-    "- batch size\n",
-    "- loss function"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -31,18 +18,40 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hyperparameters and Model Architecture"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WEIGHT_DECAY = 0.0\n",
+    "DROPOUT_RATE = 0.2\n",
+    "LEARNING_RATE = 0.001\n",
+    "BATCH_SIZE = 10\n",
+    "CRITERION = F.nll_loss\n",
+    "EPOCHS = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
     "    def __init__(self, y: int, z: int, convolution_function: nn.Module):\n",
     "        super(CNN, self).__init__() \n",
-    "        self.dropout = nn.Dropout(0.2)\n",
-    "        self.conv1 = nn.Conv2d(z, 32, 3)\n",
-    "        self.conv2 = nn.Conv2d(32, 64, 3)\n",
-    "        self.conv3 = nn.Conv2d(64, 128, 3)\n",
+    "        self.dropout = nn.Dropout(DROPOUT_RATE)\n",
+    "        self.conv1 = convolution_function(z, 32, 3)\n",
+    "        self.conv2 = convolution_function(32, 64, 3)\n",
+    "        self.conv3 = convolution_function(64, 128, 3)\n",
     "        x = torch.randn(z, y, y).view(-1, z, y, y)\n",
     "        self.to_linear = None\n",
     "        self.convs(x)\n",
@@ -50,9 +59,9 @@
     "        self.fc2 = nn.Linear(512, 10)\n",
     "\n",
     "    def convs(self, x):\n",
-    "        x = F.max_pool1d(F.relu(self.conv1(x)), (2, 2))\n",
-    "        x = F.max_pool1d(F.relu(self.conv2(x)), (2, 2))\n",
-    "        x = F.max_pool1d(F.relu(self.conv3(x)), (2, 2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv1(x)), (2, 2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv2(x)), (2, 2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv3(x)), (2, 2))\n",
     "        if self.to_linear is None:\n",
     "            self.to_linear = x[0].shape[0] * x[0].shape[1] * x[0].shape[2]\n",
     "        return x\n",
@@ -71,12 +80,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MNIST"
+    "### MNIST"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,58 +94,58 @@
     "validation_set_size = int(len(train) * 0.1)\n",
     "training_set_size = len(train) - validation_set_size\n",
     "train_set, validation_set = torch.utils.data.random_split(train, [training_set_size, validation_set_size])\n",
-    "train_set = torch.utils.data.DataLoader(train, batch_size=10, shuffle=True)\n",
-    "validation_set = torch.utils.data.DataLoader(validation_set, batch_size=10, shuffle=True)\n",
-    "test_set = torch.utils.data.DataLoader(test, batch_size=10, shuffle=True)"
+    "train_set = torch.utils.data.DataLoader(train, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "validation_set = torch.utils.data.DataLoader(validation_set, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "test_set = torch.utils.data.DataLoader(test, batch_size=BATCH_SIZE, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:24<00:00, 241.30it/s]\n",
-      "  0%|          | 26/6000 [00:00<00:23, 258.32it/s]"
+      "100%|██████████| 6000/6000 [00:34<00:00, 175.89it/s]\n",
+      "  0%|          | 13/6000 [00:00<00:48, 123.67it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.1049, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0405, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:23<00:00, 253.08it/s]\n",
-      "  0%|          | 24/6000 [00:00<00:25, 236.84it/s]"
+      "100%|██████████| 6000/6000 [00:35<00:00, 168.43it/s]\n",
+      "  0%|          | 22/6000 [00:00<00:27, 215.23it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0202, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0054, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:24<00:00, 242.02it/s]"
+      "100%|██████████| 6000/6000 [00:34<00:00, 176.34it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0380, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0004, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
@@ -149,14 +158,13 @@
    ],
    "source": [
     "MNIST_net = CNN(28, 1, nn.Conv2d).cuda()\n",
-    "optimizer = optim.Adam(MNIST_net.parameters(), lr=0.001)\n",
-    "EPOCHS = 3\n",
+    "optimizer = optim.Adam(MNIST_net.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
     "for batch in range(EPOCHS):\n",
     "    for data in tqdm(train_set):\n",
     "        X, y = data\n",
     "        MNIST_net.zero_grad()\n",
     "        output = MNIST_net(X.cuda())\n",
-    "        loss = F.nll_loss(output, y.cuda())\n",
+    "        loss = CRITERION(output, y.cuda())\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    print(loss)"
@@ -164,16 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 0.9845\n",
-      "Validation F1 Score: 0.9844844559726702\n",
-      "Validation AUC Score: 0.9913886672966388\n"
+      "Validation Accuracy: 0.993\n",
+      "Validation F1 Score: 0.992990445536965\n",
+      "Validation AUC Score: 0.996131815536789\n"
      ]
     }
    ],
@@ -202,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CIFAR-10"
+    "### CIFAR-10"
    ]
   },
   {
@@ -225,58 +233,58 @@
     "validation_set_size = int(len(train) * 0.1)\n",
     "training_set_size = len(train) - validation_set_size\n",
     "train_set, validation_set = torch.utils.data.random_split(train, [training_set_size, validation_set_size])\n",
-    "train_set = torch.utils.data.DataLoader(train, batch_size=10, shuffle=True)\n",
-    "validation_set = torch.utils.data.DataLoader(validation_set, batch_size=10, shuffle=True)\n",
-    "test_set = torch.utils.data.DataLoader(test, batch_size=10, shuffle=True)"
+    "train_set = torch.utils.data.DataLoader(train, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "validation_set = torch.utils.data.DataLoader(validation_set, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "test_set = torch.utils.data.DataLoader(test, batch_size=BATCH_SIZE, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [00:23<00:00, 214.45it/s]\n",
-      "  0%|          | 21/5000 [00:00<00:24, 205.57it/s]"
+      "100%|██████████| 5000/5000 [00:31<00:00, 158.24it/s]\n",
+      "  0%|          | 15/5000 [00:00<00:35, 141.43it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.8876, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(1.6725, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [00:22<00:00, 219.43it/s]\n",
-      "  0%|          | 22/5000 [00:00<00:23, 212.68it/s]"
+      "100%|██████████| 5000/5000 [00:30<00:00, 165.40it/s]\n",
+      "  0%|          | 16/5000 [00:00<00:31, 156.23it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.1025, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.9463, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [00:22<00:00, 222.54it/s]"
+      "100%|██████████| 5000/5000 [00:31<00:00, 159.27it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.3915, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.9590, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
@@ -289,14 +297,13 @@
    ],
    "source": [
     "CIFAR10_net = CNN(32, 3, nn.Conv2d).cuda()\n",
-    "optimizer = optim.Adam(CIFAR10_net.parameters(), lr=0.001)\n",
-    "EPOCHS = 3\n",
+    "optimizer = optim.Adam(CIFAR10_net.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
     "for batch in range(EPOCHS):\n",
     "    for data in tqdm(train_set):\n",
     "        X, y = data\n",
     "        CIFAR10_net.zero_grad()\n",
     "        output = CIFAR10_net(X.cuda())\n",
-    "        loss = F.nll_loss(output, y.cuda())\n",
+    "        loss = CRITERION(output, y.cuda())\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    print(loss)"
@@ -304,16 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 0.6866\n",
-      "Validation F1 Score: 0.6785271301111097\n",
-      "Validation AUC Score: 0.8250596056193255\n"
+      "Validation Accuracy: 0.6664\n",
+      "Validation F1 Score: 0.6557049535746451\n",
+      "Validation AUC Score: 0.815043988147967\n"
      ]
     }
    ],
@@ -342,12 +349,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Iyer"
+    "### Iyer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,19 +373,17 @@
     "validation = []\n",
     "for i in range(len(data[0])):\n",
     "    if i < training_set_size:\n",
-    "        # print(data[0][i])\n",
     "        training.append([data[0][i], data[1][i]])\n",
     "    elif i < training_set_size + validation_set_size:\n",
     "        validation.append([data[0][i], data[1][i]])\n",
     "    else:\n",
     "        test.append([data[0][i], data[1][i]])\n",
-    "# print(training[0])\n",
-    "tensor_train = torch.Tensor(training)\n",
-    "tensor_validation = torch.Tensor(validation)\n",
-    "tensor_test = torch.Tensor(test)\n",
-    "train_set = torch.utils.data.DataLoader(train_set, batch_size=10, shuffle=True)\n",
-    "validation_set = torch.utils.data.DataLoader(validation_set, batch_size=10, shuffle=True)\n",
-    "test_set = torch.utils.data.DataLoader(tensor_test, batch_size=10, shuffle=True)"
+    "tensor_train = torch.Tensor(np.array(training))\n",
+    "tensor_validation = torch.Tensor(np.array(validation))\n",
+    "tensor_test = torch.Tensor(np.array(test))\n",
+    "train_set = torch.utils.data.DataLoader(train_set, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "validation_set = torch.utils.data.DataLoader(validation_set, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "test_set = torch.utils.data.DataLoader(tensor_test, batch_size=BATCH_SIZE, shuffle=True)"
    ]
   },
   {
@@ -413,14 +418,14 @@
    "source": [
     "print(validation_set)\n",
     "Iyer_net = CNN(1, 12, nn.Conv1d).cuda()\n",
-    "optimizer = optim.Adam(Iyer_net.parameters(), lr=0.001)\n",
+    "optimizer = optim.Adam(Iyer_net.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
     "EPOCHS = 3\n",
     "for batch in range(EPOCHS):\n",
     "    for data in tqdm(train_set):\n",
     "        X, y = data\n",
     "        Iyer_net.zero_grad()\n",
     "        output = Iyer_net(X.cuda())\n",
-    "        loss = F.nll_loss(output, y.cuda())\n",
+    "        loss = CRITERION(output, y.cuda())\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    print(loss)"
