done with cnn for now

--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,51 +104,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5400/5400 [01:00<00:00, 89.60it/s] \n",
-      "  0%|          | 15/5400 [00:00<00:37, 142.33it/s]"
+      "100%|██████████| 5400/5400 [00:52<00:00, 102.80it/s]\n",
+      "  0%|          | 12/5400 [00:00<00:45, 118.36it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0699, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.4466, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5400/5400 [01:02<00:00, 86.71it/s] \n",
-      "  0%|          | 15/5400 [00:00<00:36, 145.54it/s]"
+      "100%|██████████| 5400/5400 [00:50<00:00, 106.62it/s]\n",
+      "  0%|          | 14/5400 [00:00<00:40, 132.71it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0188, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0001, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5400/5400 [00:58<00:00, 93.03it/s] "
+      "100%|██████████| 5400/5400 [00:51<00:00, 105.34it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0015, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.2072, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
@@ -175,16 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 0.9828333333333333\n",
-      "Validation F1 Score: 0.982945776735584\n",
-      "Validation AUC Score: 0.9906334510264463\n"
+      "Validation Accuracy: 0.984\n",
+      "Validation F1 Score: 0.9839195689358654\n",
+      "(6000, 10) (6000, 10)\n",
+      "Validation AUC Score: 0.9910829480538382\n"
      ]
     }
    ],
@@ -204,6 +205,7 @@
     "print(\"Validation F1 Score:\", metrics.f1_score(true, output, average=\"macro\"))\n",
     "true = np.eye(10)[true]\n",
     "output = np.eye(10)[output]\n",
+    "print(true.shape, output.shape)\n",
     "print(\"Validation AUC Score:\", metrics.roc_auc_score(true, output, multi_class=\"ovo\", average=\"macro\"))\n",
     "            "
    ]
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -243,51 +245,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [00:31<00:00, 158.24it/s]\n",
-      "  0%|          | 15/5000 [00:00<00:35, 141.43it/s]"
+      "100%|██████████| 5000/5000 [01:26<00:00, 58.07it/s]\n",
+      "  0%|          | 7/5000 [00:00<01:32, 54.01it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.6725, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(1.3031, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [00:30<00:00, 165.40it/s]\n",
-      "  0%|          | 16/5000 [00:00<00:31, 156.23it/s]"
+      "100%|██████████| 5000/5000 [01:35<00:00, 52.48it/s]\n",
+      "  0%|          | 8/5000 [00:00<01:04, 77.37it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.9463, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.9414, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [00:31<00:00, 159.27it/s]"
+      "100%|██████████| 5000/5000 [01:32<00:00, 53.96it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.9590, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(1.0281, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
@@ -314,16 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 0.6664\n",
-      "Validation F1 Score: 0.6557049535746451\n",
-      "Validation AUC Score: 0.815043988147967\n"
+      "Validation Accuracy: 0.6732\n",
+      "Validation F1 Score: 0.6775597070102387\n",
+      "Validation AUC Score: 0.8184548189215338\n"
      ]
     }
    ],
@@ -357,15 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "420 46 51\n",
-      "torch.Size([420, 1, 12, 12])\n"
+      "420 46 51\n"
      ]
     }
    ],
@@ -391,7 +392,6 @@
     "training_set_size -= validation_set_size\n",
     "print(training_set_size, validation_set_size, test_set_size)\n",
     "train_X = X[:training_set_size]\n",
-    "print(train_X.shape)\n",
     "train_y = y[:training_set_size]\n",
     "validation_X = X[training_set_size:training_set_size + validation_set_size]\n",
     "validation_y = y[training_set_size:training_set_size + validation_set_size]\n",
@@ -401,51 +401,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:00<00:00, 99.31it/s]\n",
-      " 19%|█▉        | 8/42 [00:00<00:00, 63.45it/s]"
+      "100%|██████████| 42/42 [00:00<00:00, 97.31it/s] \n",
+      "  5%|▍         | 2/42 [00:00<00:03, 11.37it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.0682, grad_fn=<NllLossBackward0>)\n"
+      "tensor(1.7434, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:00<00:00, 69.65it/s]\n",
-      " 31%|███       | 13/42 [00:00<00:00, 81.96it/s]"
+      "100%|██████████| 42/42 [00:00<00:00, 86.93it/s]\n",
+      " 17%|█▋        | 7/42 [00:00<00:00, 47.25it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.7472, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.7695, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:00<00:00, 76.45it/s]"
+      "100%|██████████| 42/42 [00:07<00:00,  5.63it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.8556, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.5947, grad_fn=<NllLossBackward0>)\n"
      ]
     },
     {
@@ -475,16 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[tensor(3), tensor(7), tensor(6), tensor(5), tensor(3), tensor(11), tensor(9), tensor(7), tensor(2), tensor(3), tensor(3), tensor(4), tensor(3), tensor(3), tensor(2), tensor(9), tensor(3), tensor(7), tensor(3), tensor(7), tensor(3), tensor(4), tensor(4), tensor(3), tensor(3), tensor(2), tensor(3), tensor(9), tensor(2), tensor(7), tensor(7), tensor(3), tensor(3), tensor(2), tensor(3), tensor(5), tensor(3), tensor(3), tensor(3), tensor(4), tensor(3), tensor(2), tensor(4), tensor(6), tensor(6), tensor(3)]\n",
-      "Validation Accuracy: 0.7608695652173914\n",
-      "Validation F1 Score: 0.4928320802005013\n"
+      "Validation Accuracy: 0.6304347826086957\n",
+      "Validation F1 Score: 0.5540196078431372\n",
+      "(46, 12) (46, 12)\n"
      ]
     },
     {
@@ -494,7 +494,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-9a8ec6fa0acd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mtrue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meye\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrue\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meye\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Validation AUC Score:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroc_auc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmulti_class\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"ovo\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"macro\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-64-d01cffae3883>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meye\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Validation AUC Score:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroc_auc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmulti_class\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"ovo\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"macro\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/opt/tljh/user/lib/python3.7/site-packages/sklearn/metrics/_ranking.py\u001b[0m in \u001b[0;36mroc_auc_score\u001b[0;34m(y_true, y_score, average, sample_weight, max_fpr, multi_class, labels)\u001b[0m\n\u001b[1;32m    393\u001b[0m                                              max_fpr=max_fpr),\n\u001b[1;32m    394\u001b[0m                                      \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 395\u001b[0;31m                                      sample_weight=sample_weight)\n\u001b[0m\u001b[1;32m    396\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    397\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/tljh/user/lib/python3.7/site-packages/sklearn/metrics/_base.py\u001b[0m in \u001b[0;36m_average_binary_score\u001b[0;34m(binary_metric, y_true, y_score, average, sample_weight)\u001b[0m\n\u001b[1;32m    118\u001b[0m         \u001b[0my_score_c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnot_average_axis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m         score[c] = binary_metric(y_true_c, y_score_c,\n\u001b[0;32m--> 120\u001b[0;31m                                  sample_weight=score_weight)\n\u001b[0m\u001b[1;32m    121\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m     \u001b[0;31m# Average the results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/tljh/user/lib/python3.7/site-packages/sklearn/metrics/_ranking.py\u001b[0m in \u001b[0;36m_binary_roc_auc_score\u001b[0;34m(y_true, y_score, sample_weight, max_fpr)\u001b[0m\n\u001b[1;32m    219\u001b[0m     \u001b[0;34m\"\"\"Binary roc auc score\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m         raise ValueError(\"Only one class present in y_true. ROC AUC score \"\n\u001b[0m\u001b[1;32m    222\u001b[0m                          \"is not defined in that case.\")\n\u001b[1;32m    223\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -507,15 +507,15 @@
     "true = []\n",
     "Iyer_net.eval()\n",
     "with torch.no_grad():\n",
-    "    for i in range(validation_X.shape[0]):\n",
+    "    for i in range(validation_set_size):\n",
     "        output.append(torch.argmax(Iyer_net(validation_X[i].view(-1, 1, 12, 12))).cpu())\n",
     "        true.append(validation_y[i])\n",
     "Iyer_net.train()\n",
-    "print(output)\n",
     "print(\"Validation Accuracy:\", metrics.accuracy_score(true, output))\n",
     "print(\"Validation F1 Score:\", metrics.f1_score(true, output, average=\"macro\"))\n",
     "true = np.eye(12)[true]\n",
     "output = np.eye(12)[output]\n",
+    "print(true.shape, output.shape)\n",
     "print(\"Validation AUC Score:\", metrics.roc_auc_score(true, output, multi_class=\"ovo\", average=\"macro\"))"
    ]
   }
